Add Raft.